// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"{
  \\"num\\": 1,
  \\"str\\": \\"str\\",
  \\"date\\": \\"1970-02-01T05:00:00.000Z\\",
  \\"a\\": {
    \\"name\\": \\"a\\",
    \\"_circular\\": 2
  },
  \\"_circular\\": 1,
  \\"obj\\": \\"circular_1\\",
  \\"a2\\": \\"circular_2\\"
}"
`;

exports[`common json should work 1`] = `
"{
  \\"num\\": 1,
  \\"str\\": \\"str\\",
  \\"date\\": \\"1970-02-01T05:00:00.000Z\\",
  \\"a\\": {
    \\"name\\": \\"a\\",
    \\"_circular\\": 2
  },
  \\"b\\": {
    \\"name\\": \\"b\\"
  },
  \\"_circular\\": 1,
  \\"obj\\": \\"circular_1\\",
  \\"a2\\": \\"circular_2\\"
}"
`;
